--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -69,6 +69,18 @@ h1, h2, h3, h4, h5, h6, .navbar {
   padding-right: 5%;
 }
 
+.help-block {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+  margin: 10px;
+}
+
+.clr {
+  clear: both;
+}
+
 .btn {
   border-radius: 0;
 }
