--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -13,6 +13,9 @@
     <% current_course.sections.each do |section| %>
       <li>
         <%= section.title %>
+        <% if current_course.image.present? %>
+          <%= image_tag current_course.image.url, class: 'img-fluid' %>
+        <% end %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
         <ul>
           <% section.lessons.each do |lesson| %>
