--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -20,6 +20,7 @@ body{
   min-height: 100px;
   background-color: rgba(36, 32, 33, 0.9);
   font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
 }
 
 #footer a {
