--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -28,3 +28,11 @@ body{
   color: #17a2b8;
   font-weight: 100;
 }
+
+.social-button {
+  margin: 4px;
+}
+
+.social a:hover {
+  text-decoration: none;
+}
