--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,11 +68,11 @@
       <div class="col-12 col-sm-3">
         <b>About</b>
         <br />
-        <%= link_to 'Team', '#' %>
+        <%= link_to 'Team', team_path %>
         <br />
-        <%= link_to 'Careers', '#' %>
+        <%= link_to 'Careers', careers_path %>
         <br />
-        <%= link_to 'Privacy Policy', '#' %>
+        <%= link_to 'Privacy Policy', privacy_path %>
       </div>
       <div class="col-12 col-sm-3">
         <b>Contact</b>
@@ -83,11 +83,15 @@
         <br />
         Cambridge MA, 02113
       </div>
-      <div class="col-12 col-sm-3">
+      <div class="col-12 col-sm-3 social">
         <b>Social</b>
-        <span class="fa fa-github-square"></span>
-        <span class="fa fa-facebook-square"></span>
-        <span class="fa fa-twitter-square"></span>
+        <br />
+        <br />
+        <%= link_to 'https://github.com/CSelvidge' do %>
+          <span class="fa fa-github-square fa-2x social-button"></span>
+        <% end %>
+        <span class="fa fa-facebook-square fa-2x social-button"></span>
+        <span class="fa fa-twitter-square fa-2x social-button"></span>
       </div>
     </div>
   </div>
