--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -110,6 +110,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 .section-li {
+  background: #626366;
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
