--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,10 +88,10 @@
         <br />
         <br />
         <%= link_to 'https://github.com/CSelvidge' do %>
-          <span class="fa fa-github-square fa-2x social-button"></span>
+          <span class="fas fa-adjust fa-2x social-button"></span>
         <% end %>
-        <span class="fa fa-facebook-square fa-2x social-button"></span>
-        <span class="fa fa-twitter-square fa-2x social-button"></span>
+        <span class="fas fa-facebook-square fa-2x social-button"></span>
+        <span class="fas fa-twitter-square fa-2x social-button"></span>
       </div>
     </div>
   </div>
